TypedLama/regression/negative/test005.2.lama
-- Haskell-style typing

-- переопределение типов version 2:
z :: Str; -- если раскомментировать эту строчку, должна быть та же ошибка переопределения типа
local z :: Str = "z";